# first_project_cmake

./: CMakeLists.txt  README.md
include/: config.h.in
src/: main.cpp
